2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/playlist.wpl: Add the application/vnd.ms-wpl mime-type

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.p7b:
	* tests/test.pkipath: Patch from Ville Skyttä
	<ville.skytta@iki.fi> to add PKCS#7 and PkiPath file types
	(Closes: #10864)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: PKCS#12 bundles are not text files,
	patch from Ville Skyttä <ville.skytta@iki.fi> (Closes: #19056)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/Stallman_Richard_-_The_GNU_Manifesto.fb2:
	* tests/list: Patch from Pino Toscano <pino@kde.org>
	to add the FictionBook (fb2) file type (Closes: #17553)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Ville Skyttä
	<ville.skytta@iki.fi> to add support for MS cab files
	* tests/copying.cab:
	* tests/list: Add test file for the above

2009-01-07  Pino Toscano  <pino@kde.org>

	* update-mime-database.1: Update the URL to the specifications.
	Probably not the most correct one, but better than a non-existing page.

2009-01-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/msg0001.gsm: Add audio/x-gsm for GSM 06.10 encoded audio files

2009-01-05  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Remove application/x-msi magic,
	it was just generic ole-storage magic so even .doc files would match it.
	 (Closes: #18072)
	* tests/list: Add expected failure for the lookup by file data for test.msi,
	since we have no msi-specific magic. Would be better to be able to specify
	"the expected mimetype for this data-only lookup is ole-storage" in tests/list :-)

2008-12-20  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add magic for GIMP xcf files
	* tests/list: Fix the resulting "unexpected pass" for xcf.
