@@ -1,3 +1,9 @@
+2009-02-06  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Koos Vriezen
+	<koos.vriezen@gmail.com> to add more aliases for media types,
+	as used by kmplayer (Closes: #19671)
+
 2009-01-13  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in:
